--- a/coool/datadog.yaml
+++ b/coool/datadog.yaml
@@ -2,25 +2,25 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    app: datadog-datadog
+    app: kube-state-metrics
     release: datadog
-  name: datadog-datadog
+  name: datadog-kube-state-metrics
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    app: kube-state-metrics
+    app: datadog
     release: datadog
-  name: datadog-kube-state-metrics
+  name: datadog
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app: datadog-datadog
+    app: datadog
     release: datadog
-  name: datadog-datadog
+  name: datadog
 rules:
 - apiGroups:
   - ""
@@ -181,16 +181,16 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    app: datadog-datadog
+    app: datadog
     release: datadog
-  name: datadog-datadog
+  name: datadog
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: datadog-datadog
+  name: datadog
 subjects:
 - kind: ServiceAccount
-  name: datadog-datadog
+  name: datadog
   namespace: default
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
@@ -215,9 +215,9 @@ data:
 kind: Secret
 metadata:
   labels:
-    app: datadog-datadog
+    app: datadog
     release: datadog
-  name: datadog-datadog
+  name: datadog
 type: Opaque
 ---
 apiVersion: v1
