--- a/coool/datadog.yaml
+++ b/coool/datadog.yaml
@@ -35,6 +35,13 @@ rules:
   - get
   - list
   - watch
+- apiGroups:
+  - quota.openshift.io
+  resources:
+  - clusterresourcequotas
+  verbs:
+  - get
+  - list
 - nonResourceURLs:
   - /version
   - /healthz
