--- a/coool/datadog.yaml
+++ b/coool/datadog.yaml
@@ -7,6 +7,7 @@ metadata:
     release: datadog
   name: datadog-kube-state-metrics
 ---
+'---apiVersion': rbac.authorization.k8s.io/v1
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -14,13 +15,9 @@ metadata:
     app: datadog
     release: datadog
   name: datadog
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  labels:
-    app: datadog
-    release: datadog
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
   name: datadog
 rules:
 - apiGroups:
@@ -66,6 +63,10 @@ rules:
   - endpoints
   verbs:
   - get
+subjects:
+- kind: ServiceAccount
+  name: datadog
+  namespace: default---
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
@@ -215,22 +216,6 @@ rules:
   verbs:
   - list
   - watch
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  labels:
-    app: datadog
-    release: datadog
-  name: datadog
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: datadog
-subjects:
-- kind: ServiceAccount
-  name: datadog
-  namespace: default
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
