--- a/coool/datadog.yaml
+++ b/coool/datadog.yaml
@@ -7,7 +7,6 @@ metadata:
     release: datadog
   name: datadog-kube-state-metrics
 ---
-'---apiVersion': rbac.authorization.k8s.io/v1
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -15,9 +14,13 @@ metadata:
     app: datadog
     release: datadog
   name: datadog
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  labels:
+    app: datadog
+    release: datadog
   name: datadog
 rules:
 - apiGroups:
@@ -63,10 +66,6 @@ rules:
   - endpoints
   verbs:
   - get
-subjects:
-- kind: ServiceAccount
-  name: datadog
-  namespace: default---
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
@@ -216,6 +215,22 @@ rules:
   verbs:
   - list
   - watch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  labels:
+    app: datadog
+    release: datadog
+  name: datadog
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: datadog
+subjects:
+- kind: ServiceAccount
+  name: datadog
+  namespace: default
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
